gameMode and player blueprint is created and added.

--- a/Survivorio/Config/DefaultEngine.ini
+++ b/Survivorio/Config/DefaultEngine.ini
@@ -1,7 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Level/Level_Main.Level_Main
+EditorStartupMap=/Game/Level/Level_Main.Level_Main
+GlobalDefaultGameMode=/Game/Blueprint/BP_GameModeMain.BP_GameModeMain_C
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
